vlib/v/checker/tests/template_keyword_ident_err.out
./templates/template_keyword_ident_err.html:1:31: error: undefined ident: `import` (veb action: index)
    1 | @import 'example'
      |                  ^
called from vlib/v/checker/tests/template_keyword_ident_err.vv:12:9
   10 | 
   11 | pub fn (mut app Application) index() veb.Result {
   12 |     return $veb.html('./templates/template_keyword_ident_err.html')
      |            ^
   13 | }
   14 | 
./templates/template_keyword_ident_err.html:1:31: error: expression does not return a value (veb action: index)
    1 | @import 'example'
      |                  ^
called from vlib/v/checker/tests/template_keyword_ident_err.vv:12:9
   10 | 
   11 | pub fn (mut app Application) index() veb.Result {
   12 |     return $veb.html('./templates/template_keyword_ident_err.html')
      |            ^
   13 | }
   14 | 
